=== HEAD

* Convert numeric fields to BigDecimal in PostgreSQL adapter (jeremyevans)

* Add :decimal fields to the schema parser (jeremyevans)

* The expr argument in join table now allows the same argument as filter, so it can take a string or a blockless filter expression (brushbox, jeremyevans)

* No longer assume the expr argument to join_table references the primary key column (jeremyevans)

* Rename the Sequel.time_class setting to Sequel.datetime_class (jeremyevans)

* Add savepoint/nesting support to postgresql transactions (elven)

* Use the specified table alias when joining a dataset, instead of the automatically generated alias (brushbox)

=== 2.0.1 (2008-06-04)

* Have PostgreSQL money type use BigDecimal instead of Float (jeremyevans)

* Have the PostgreSQL and MySQL adapters use the Sequel.time_class setting for datetime/timestamp types (jeremyevans)

* Add Sequel.time_class and String#to_sequel_time, used for converting time values from the database to either Time (default) or DateTime (jeremyevans)

* Make identifier quoting uppercase by default, to work better with the SQL standard, override in PostgreSQL (jeremyevans) (#232)

* Add StringExpression#+, for simple SQL string concatenation (:x.sql_string + :y) (jeremyevans)

* Make StringMethods.like to a case sensensitive search on MySQL (use ilike for the old behavior) (jeremyevans)

* Add StringMethods.ilike, for case insensitive pattern matching (jeremyevans)

* Refactor ComplexExpression into three subclasses and a few modules, so operators that don't make sense are not defined for the class (jeremyevans)

=== 2.0.0 (2008-06-01)

* Refactor String inflection support, you must use String.inflections instead of Inflector.inflections now (jeremyevans)

* Allow connection to ODBC-MSSQL via a URL (petersumskas) (#230)

* Comprehensive update of all documentation, except for the block filters and adapters (jeremyevans)
